# venator

./: LICENSE  README.md  pyproject.toml
data/: splits.json
docs/: METHODOLOGY.md  RESULTS.md
examples/: quickstart.py
scripts/: collect_prompts.py  create_splits.py  evaluate.py  evaluate_final.py  extract_activations.py  run_ablations.py  run_supervised_ablations.py  train_detector.py
tests/: conftest.py  test_contrastive.py  test_detectors.py  test_ensemble_metrics.py  test_extractor.py  test_linear_probe.py  test_pipeline.py  test_prompts.py  test_splits.py  test_storage.py
venator/: __init__.py  config.py  pipeline.py
venator/activation/: __init__.py  extractor.py  storage.py
venator/dashboard/: __init__.py  app.py  state.py
venator/dashboard/components/: charts.py  pipeline_status.py  prompt_table.py
venator/dashboard/pages/: 1_data.py  1_pipeline.py  2_extract.py  2_results.py  3_explore.py  3_split.py  4_detect.py  4_train.py  5_ablations.py  5_evaluate.py  6_detect.py  7_ablations.py  quick_run.py
venator/data/: __init__.py  prompts.py  splits.py
venator/detection/: __init__.py  autoencoder.py  base.py  contrastive.py  ensemble.py  isolation_forest.py  linear_probe.py  metrics.py  pca_mahalanobis.py
